# signalupdates-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  wrangler.example.toml
.github/workflows/: rust.yml
src/: discord.rs  env.rs  language.rs  lib.rs  localization_change.rs  logging.rs  network.rs  platform.rs  post.rs  state.rs  types.rs  utils.rs
src/discourse/: mod.rs  types.rs
src/github/: mod.rs  types.rs
src/localization/: change.rs  changes.rs  collection.rs  completeness.rs  language.rs  mod.rs  render_mode.rs  strings_file_kind.rs
src/markdown/: commit.rs  commit_status.rs  mod.rs  post.rs
src/platform/: android.rs  mod.rs
src/post/: commit.rs  mod.rs
src/types/: discourse.rs  github.rs  github_comparison_example.json  mod.rs
