[package]
name = "signalupdates-bot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
worker = "0.0.10"
worker-kv = "0.5"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
semver = "1.0"
lenient_semver = "0.4"
strum = "0.24"
strum_macros = "0.24"
locale-codes = "0.3"
regex = "1.5"
lazy_static = "1.4"
sha2 = "0.10"
base16ct = { version = "0.1", features = ["alloc"] }
parse_link_header = "0.3"

[dev-dependencies]
test-case = "2.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-dependencies
[profile.release.package."*"]
codegen-units = 1
opt-level = 3
